À propos de la compatibilité avec bmake
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/branches/releng-1.1@81 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/INSTALL
+++ b/INSTALL
@@ -21,7 +21,7 @@ La procédure d'installation respecte DESTDIR et PREFIX.
 Cf. ``FreeBSD Porter's Handbook'', 9.4.
 
 Les fichiers de directives sont installés dans le dossier
-$DESTDIR/$PREFIX/share/mk.
+${DESTDIR}${PREFIX}/share/mk.
 
 
 APPENDICE. PROCÉDURE D'INSTALLATION DE BMAKE
