--- a/INSTALL
+++ b/INSTALL
@@ -10,27 +10,91 @@ $Id$
 Dans ce qui suit on note `make' le nom du programme `BSD Make' sur le
 système. Pour FreeBSD, il s'agit effectivement du binaire `make', pour
 Mac OS-X il s'agit de `bsdmake', pour les autres systèmes (NetBSD et
-les systèmes basés sur Linux), il s'agit de `bmake'. (Un appendice
-explique comment installer `bmake' sur les systèmes qui ne possèdent
-pas ce programme.)
+les systèmes basés sur Linux), il s'agit de `bmake'.
 
-L'installation se fait avec la séquence d'instruction
 
-  ./configure --prefix=<prefix>
+  1 INSTALLATION DE BPS POUR L'UTILISATEUR
+  2 INSTALLATION DE BMAKE POUR LES UTILISATEURS DE LINUX
+
+1 INSTALLATION DE BPS POUR L'UTILISATEUR
+
+Si vous n'êtes pas administrateur de la machine que vous utilisez, la
+procédure d'installation de BPS est la suivante:
+  -- copie des fichiers de directives dans un dossier approprié;
+  -- paramétrisation du shell pour utiliser ces fichiers. 
+
+1.1 Copie des fichiers de directives
+
+Après avoir téléchargé la dernière version de BPS,
+
+  http://download.gna.org/bsdmakepscripts/bsdmakepscripts-1.2.tar.bz2
+
+et placé votre copie locale dans ~/distfiles, la procédure copiant les
+fichiers de BPS est la suivante:
+
+  tar xjf ~/distfiles/bsdmakepscripts-1.2.tar.bz2
+  cd bsdmakepscripts-1.2
+  ./configure --prefix=$HOME
   make all
   make install
+  cd ..
+  rm -Rf bsdmakepscripts-1.2
 
-Des valeurs fequemment utilisées pour <prefix> sont /usr/local (valeur
-implcite), /opt/local ou ${HOME}.
-
-La procédure d'installation respecte DESTDIR et PREFIX.
-Cf. FreeBSD Porter's Handbook, 9.4.
-
-Les fichiers de directives sont installés dans le dossier
-${DESTDIR}${PREFIX}/share/mk.
+Si tout s'est bien passé, les fichiers de directives ont été installés
+dans votre répertoire personnel. Sinon, voyez les conseils prodigués par 1.3.
 
 
-APPENDICE. PROCÉDURE D'INSTALLATION DE BMAKE
+1.2 Utilisation des fichiers
+
+Pour utiliser les fichiers de directives, il faut explique à make où
+les trouver. Cela peut se faire de plusieurs façons.
+
+La première façon consiste à utiliser l'option `I' du programme, comme ceci:
+
+  make -I${HOME}/share/mk
+
+La seconde consiste à configurer le programme appelant make pour qu'il
+place la liaison `MAKEFLAGS=-I${HOME}/share/mk' dans l'environnement
+de make. Ce programme appelan est typiquement le shell de
+l'utilisateur. Pour les shells de la famille sh, on ajoute les lignes
+
+  MAKEFLAGS=${HOME}/share/mk
+  export MAKEFLAGS
+
+dans le fichier d'initialisation de l'environnement
+(${HOME}/.profile). Pour les shells de la famille csh, on ajoute la
+ligne
+
+  setenv MAKEFLAGS ${HOME}/share/mk
+
+au fichier ${HOME}/.cshrc ou ${HOME}/.tcshrc.
+
+
+1.3 Si quelque chose a mal tourné
+
+Si le déploiement de l'archive de distribution avec tar n'a pas
+terminé correctement, il se peut que:
+  -- votre version de tar ne comprenne pas l'option `j';
+  -- votre système n'est pas apte à traiter la compression BZIP2.
+
+Si votre commande tar ne comprend pas l'option `j', il se peut qu'une
+autre version de tar, par exemple gtar (GNU tar), traitant
+correctement cette option soit installée sur votre système. Si ce
+n'est pas le cas, vous pouvez déployer l'archive en deux temps:
+
+  bunzip2 ~/distfiles/bsdmakepscripts-1.2.tar.bz2
+  tar xf ~/distfiles/bsdmakepscripts-1.2.tar
+
+Si votre système n'est pas apte à traiter la compression BZIP2,
+c'est-à-dire si vous ne pouvez pas trouver de commande bunzip2, vous
+pouvez vous rabattre sur l'archive bsdmakepscripts-1.2.tar.gz.
+
+Si le script `configure' ne termine pas correctement, envoyez-moi un
+mail pour m'en avertir.
+
+
+
+2 INSTALLATION DE BMAKE POUR LES UTILISATEURS DE LINUX
 
 Utiliser `bmake' en environnement hostile nécessite de compiler et
 d'installer `bmake' sous son répertoire personnel. Les étapes
