Adding the README file to the files needing work
git-svn-id: svn+ssh://svn.gna.org/svn/bsdmakepscripts/trunk@238 3103e521-a7b5-4707-98a8-f8ec597c7033

--- a/TODO
+++ b/TODO
@@ -21,6 +21,8 @@ satisfactory state.  We pursue the following goals:
 Here is a list of files and their state with respect to the
 achievement of these two goals.
 
+	  README
+
   	  bps/bps.files.mk
   	  bps/bps.usertarget.mk
   	  bps/bps.objdir.mk
