Use the suggested replacement for mathpple

--- a/testsuite/texmf/test_complex/macro/preamble.tex
+++ b/testsuite/texmf/test_complex/macro/preamble.tex
@@ -18,7 +18,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{graphicx}
-\usepackage{mathpple}
+\usepackage{mathpazo}
 \usepackage[T1]{fontenc}
 \usepackage[utf8x]{inputenc}
 
