Write a more portable version of texmf test

--- a/testsuite/texmf/test_complex/macro/preamble.tex
+++ b/testsuite/texmf/test_complex/macro/preamble.tex
@@ -20,6 +20,6 @@
 \usepackage{graphicx}
 \usepackage{mathpazo}
 \usepackage[T1]{fontenc}
-\usepackage[utf8x]{inputenc}
+\usepackage[utf8]{inputenc}
 
 %%% End of file `preamble.tex'
