--- a/example/texmf/draft/galley.tex
+++ b/example/texmf/draft/galley.tex
@@ -1,7 +1,7 @@
-%%% withbibtex.tex -- A LaTeX document using bibtex
+%%% galley.tex -- A simple LaTeX document
 
 % Author: Michael Grünewald
-% Date: Thu Nov 27 09:35:52 CET 2014
+% Date: Sun Nov 23 16:20:55 CET 2014
 
 % BSD Owl Scripts (https://github.com/michipili/bsdowl)
 % This file is part of BSD Owl Scripts
@@ -14,13 +14,9 @@
 % are also available at
 % http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
 
-\documentclass{amsbook}
+\documentclass{article}
 \begin{document}
-A {\LaTeX} document using {bib\TeX} and using a reference to the
-\emph{\TeX book}~\cite{TEXBOOK}.
-\backmatter
-\bibliographystyle{plain}
-\bibliography{references}
+A simple {\LaTeX} document.
 \end{document}
 
-%%% End of file `withbibtex.tex'
+%%% End of file `galley.tex'
